--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,5 @@
 ; Database config credentials
-; Do not commit to git!! "67.70.4.21"
+; Please change this file to match how you have your mysql database configured 
 
 [db_config]
 ip = "localhost"
